src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__case_statement_with_else_and_no_condition.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
CaseStatement {
    selector: ReferenceExpr {
        kind: Member(
            Reference {
                name: "StateMachine",
            },
        ),
        base: None,
    },
    case_blocks: [],
    else_block: [],
}
