src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__case_statement_with_one_empty_condition_and_an_else.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
CaseStatement {
    selector: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "StateMachine",
            },
        ),
        base: None,
    },
    case_blocks: [
        ConditionalBlock {
            condition: LiteralInteger {
                value: 1,
            },
            body: [],
        },
    ],
    else_block: [
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
