src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__for_with_body_statement.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
ForLoopStatement {
    counter: ReferenceExpr {
        kind: Member(
            Reference {
                name: "z",
            },
        ),
        base: None,
    },
    start: ReferenceExpr {
        kind: Member(
            Reference {
                name: "x",
            },
        ),
        base: None,
    },
    end: ReferenceExpr {
        kind: Member(
            Reference {
                name: "y",
            },
        ),
        base: None,
    },
    by_step: None,
    body: [
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
