src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__for_with_literals_statement.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
ForLoopStatement {
    counter: ReferenceExpr {
        kind: Member(
            Reference {
                name: "y",
            },
        ),
        base: None,
    },
    start: ReferenceExpr {
        kind: Member(
            Reference {
                name: "x",
            },
        ),
        base: None,
    },
    end: LiteralInteger {
        value: 10,
    },
    by_step: None,
    body: [],
}
