src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__for_with_step_statement.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
ForLoopStatement {
    counter: ReferenceExpr {
        kind: Member(
            Reference {
                name: "x",
            },
        ),
        base: None,
    },
    start: LiteralInteger {
        value: 1,
    },
    end: LiteralInteger {
        value: 10,
    },
    by_step: Some(
        LiteralInteger {
            value: 7,
        },
    ),
    body: [],
}
