src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__if_elsif_elsif_else_statement_with_expressions.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
IfStatement {
    blocks: [
        ConditionalBlock {
            condition: LiteralBool {
                value: true,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Reference {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ],
        },
        ConditionalBlock {
            condition: ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "y",
                    },
                ),
                base: None,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Reference {
                            name: "z",
                        },
                    ),
                    base: None,
                },
            ],
        },
        ConditionalBlock {
            condition: ReferenceExpr {
                kind: Member(
                    Reference {
                        name: "w",
                    },
                ),
                base: None,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Reference {
                            name: "v",
                        },
                    ),
                    base: None,
                },
            ],
        },
    ],
    else_block: [
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "u",
                },
            ),
            base: None,
        },
    ],
}
