src/parser/tests/snapshots/rusty__parser__tests__control_parser_tests__repeat_with_body_statement.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
RepeatLoopStatement {
    condition: LiteralBool {
        value: true,
    },
    body: [
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
